--- a/css/style.less
+++ b/css/style.less
@@ -1,1 +1,341 @@
-@import ''
+.debug(@color:#ff0000) {
+  border: 1px solid @color;
+}
+
+.clearfix {
+  &:after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+}
+
+// css rest 
+body,
+li,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li,
+ul {
+  list-style: none;
+}
+
+body {
+  font-size: 14px Helvetica,Arial,sans-serif;
+}
+
+.top-bar {
+  .clearfix();
+  width: 1060px;
+  padding: 0 150px;
+  background-color: rgb(255,255,255);
+
+  .logo {
+    float: left;
+    .clearfix();
+    margin-left: 40px;
+
+    img {
+      float: left;
+      width: 50px;
+      height: 50px;
+      padding: 20px 2px 5px;
+    }
+
+    h1 {
+      float: left;
+      margin-top: 25px;
+      margin-left: 5px;
+      font-size: 24px;
+      color: rgb(5,120,180);
+    }
+
+  }
+
+  .top-nav {
+    .clearfix();
+    float: left;
+    margin-top: 20px;
+    margin-left: 130px;
+    margin-right: 20px;
+
+    li {
+      // .debug(@color);
+      .clearfix();
+      float: left;
+      padding: 4px 20px 2px;
+      font-size: 18px;
+
+      .text {
+        font-size: 14px;
+        float: left;
+        margin-top: 4px;
+      }
+    }
+  }
+
+  .btn {
+    .clearfix();
+    float: right;
+    margin-top: 30px;
+    margin-right: 40px;
+
+    .login-btn {
+      float: left;
+      margin-right: 0;
+      font-size: 14px;
+      color: rgb(110,220,250);
+      background: rgb(255,255,255);
+      border: 1px solid rgb(110,220,250);
+    }
+
+    .register-btn {
+      float: left;
+      font-size: 14px;
+      color: rgb(255,255,255);
+      background: rgb(0,190,250);
+      border: 1px solid rgb(110,220,250);
+    }
+  }
+}
+
+.page-header {
+  width: 1060px;
+  margin: 0 150px;
+  background-color: rgb(0,36,70);
+
+  .mian-nav {
+    .clearfix();
+    margin-left: 450px;
+
+    li {
+      // .debug(@color);
+      float: left;
+      font-size: 16px;
+      color: rgb(255,255,255);
+      padding: 3px 10px 2px;
+      line-height: 1.2;
+    }
+  }
+}
+
+.section {
+  .clearfix();
+  width: 1060px;
+  padding: 0 150px;
+
+  .section-left {
+    float: left;
+    margin-left: 40px;
+
+    .hospital {
+      width: 210px;
+      height: 180px;
+      margin-top: -18px;
+      background-color: rgb(132,220,240);
+
+      h3 {
+        font-size: 18px;
+        margin-left: 30px;
+      }
+
+      .first-line {
+        height: 1px;
+        border: none;
+        border-top: 1px solid rgb(96,121,127);
+        margin-left: 30px;
+        margin-right: 5px;
+      }
+
+      .region {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+        margin-left: 30px;
+      }
+
+      .hospital-grade-select {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+
+      }
+
+      .hs {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+        margin-left: 30px;
+        margin-top: 5px;
+      }
+
+      .department {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+      }
+
+      .doctor {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+        margin-left: 30px;
+        margin-top: 5px;
+      }
+    }
+
+    .disease {
+      width: 210px;
+      height: 105px;
+      background-color: rgb(130,243,237);
+      margin-top: -18px;
+
+      h3 {
+        font-size: 18px;
+        margin-left: 30px;
+      }
+
+      .first-line {
+        height: 1px;
+        border: none;
+        border-top: 1px solid rgb(96,121,127);
+        margin-left: 30px;
+        margin-right: 5px;
+      }
+
+      .disease-select {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+        margin-left: 30px;
+        margin-top: 5px;
+      }
+
+      .syndrome-type {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+      }
+    }
+
+    .patient {
+      width: 210px;
+      height: 140px;
+      background-color: rgb(132,220,240);
+      margin-top: -18px;
+
+      h3 {
+        font-size: 18px;
+        margin-left: 30px;
+      }
+
+      .first-line {
+        height: 1px;
+        border: none;
+        border-top: 1px solid rgb(96,121,127);
+        margin-left: 30px;
+        margin-right: 5px;
+      }
+
+      .sex {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+        margin-left: 30px;
+        margin-top: 5px;
+      }
+
+      .classification {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+      }
+
+      .age {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+        margin-left: 30px;
+        margin-top: 5px;
+      }
+    }
+
+    .others {
+      width: 210px;
+      height: 148px;
+      background-color: rgb(130,243,237);
+      margin-top: -18px;
+
+      h3 {
+        font-size: 18px;
+        margin-left: 30px;
+      }
+
+      .first-line {
+        height: 1px;
+        border: none;
+        border-top: 1px solid rgb(96,121,127);
+        margin-left: 30px;
+        margin-right: 5px;
+      }
+
+      .up-time {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+        margin-left: 30px;
+        margin-top: 5px;
+      }
+
+      .quality {
+        border-radius: 90px;
+        font-size: 16px;
+        background-color: rgb(255,255,255);
+      }
+    }
+  }
+
+  .section-right {
+    float: left;
+    width: 770px;
+    height: 573px;
+    background-color: rgb(239,239,239);
+
+    .record {
+      .clearfix();
+
+      .doctor-number {
+        float: left;
+        font-size: 16px;
+        margin-left: 40px;
+        margin-top: 30px;
+      }
+
+      .case-num {
+        float: left;
+        font-size: 14px;
+        margin-left: 380px;
+        margin-top: 40px;
+      }
+
+      img {
+        float: right;
+        width: 24px;
+        height: 24px;
+        margin-right: 40px;
+        margin-top: 40px;
+      }
+
+    }
+  }
+
+  .second-line {
+    height: 1px;
+    border: none;
+    background-color: rgb(255,255,255);
+    border: 1px ridge rgb(255,255,255);
+  }
+}
