--- a/css/style.less
+++ b/css/style.less
@@ -12,6 +12,8 @@
 
 // css rest 
 body,
+h1,
+h3,
 li,
 ul {
   margin: 0;
@@ -29,14 +31,13 @@ body {
 
 .top-bar {
   .clearfix();
-  width: 1060px;
-  padding: 0 150px;
+  width: 900px;
+  margin: 0 auto;
   background-color: rgb(255,255,255);
 
   .logo {
     float: left;
     .clearfix();
-    margin-left: 40px;
 
     img {
       float: left;
@@ -58,21 +59,21 @@ body {
   .top-nav {
     .clearfix();
     float: left;
-    margin-top: 20px;
-    margin-left: 130px;
-    margin-right: 20px;
+    margin-top: 14px;
+    margin-left: 80px;
 
     li {
       // .debug(@color);
       .clearfix();
       float: left;
       padding: 4px 20px 2px;
-      font-size: 18px;
 
-      .text {
-        font-size: 14px;
-        float: left;
-        margin-top: 4px;
+      .zh {
+        font-size: 18px;
+      }
+
+      .en {
+        font-size: 12px;
       }
     }
   }
@@ -80,8 +81,7 @@ body {
   .btn {
     .clearfix();
     float: right;
-    margin-top: 30px;
-    margin-right: 40px;
+    margin-top: 20px;
 
     .login-btn {
       float: left;
@@ -104,7 +104,7 @@ body {
 
 .page-header {
   width: 1060px;
-  margin: 0 150px;
+  margin-left: 150px;
   background-color: rgb(0,36,70);
 
   .mian-nav {
@@ -124,30 +124,23 @@ body {
 
 .section {
   .clearfix();
-  width: 1060px;
-  padding: 0 150px;
+  width: 900px;
+  margin: 0 auto;
 
   .section-left {
     float: left;
-    margin-left: 40px;
 
     .hospital {
       width: 210px;
       height: 180px;
-      margin-top: -18px;
       background-color: rgb(132,220,240);
 
       h3 {
         font-size: 18px;
-        margin-left: 30px;
-      }
-
-      .first-line {
-        height: 1px;
-        border: none;
-        border-top: 1px solid rgb(96,121,127);
+        padding: 15px 0 0;
         margin-left: 30px;
         margin-right: 5px;
+        border-bottom: 1px solid rgb(96,121,127);
       }
 
       .region {
@@ -155,6 +148,7 @@ body {
         font-size: 16px;
         background-color: rgb(255,255,255);
         margin-left: 30px;
+        margin-top: 10px;
       }
 
       .hospital-grade-select {
@@ -191,19 +185,13 @@ body {
       width: 210px;
       height: 105px;
       background-color: rgb(130,243,237);
-      margin-top: -18px;
 
       h3 {
         font-size: 18px;
-        margin-left: 30px;
-      }
-
-      .first-line {
-        height: 1px;
-        border: none;
-        border-top: 1px solid rgb(96,121,127);
+        padding: 15px 0 0;
         margin-left: 30px;
         margin-right: 5px;
+        border-bottom: 1px solid rgb(96,121,127);
       }
 
       .disease-select {
@@ -211,7 +199,7 @@ body {
         font-size: 16px;
         background-color: rgb(255,255,255);
         margin-left: 30px;
-        margin-top: 5px;
+        margin-top: 10px;
       }
 
       .syndrome-type {
@@ -225,19 +213,13 @@ body {
       width: 210px;
       height: 140px;
       background-color: rgb(132,220,240);
-      margin-top: -18px;
 
       h3 {
         font-size: 18px;
-        margin-left: 30px;
-      }
-
-      .first-line {
-        height: 1px;
-        border: none;
-        border-top: 1px solid rgb(96,121,127);
+        padding: 15px 0 0;
         margin-left: 30px;
         margin-right: 5px;
+        border-bottom: 1px solid rgb(96,121,127);
       }
 
       .sex {
@@ -245,7 +227,7 @@ body {
         font-size: 16px;
         background-color: rgb(255,255,255);
         margin-left: 30px;
-        margin-top: 5px;
+        margin-top: 10px;
       }
 
       .classification {
@@ -267,19 +249,13 @@ body {
       width: 210px;
       height: 148px;
       background-color: rgb(130,243,237);
-      margin-top: -18px;
 
       h3 {
         font-size: 18px;
-        margin-left: 30px;
-      }
-
-      .first-line {
-        height: 1px;
-        border: none;
-        border-top: 1px solid rgb(96,121,127);
+        padding: 15px 0 0;
         margin-left: 30px;
         margin-right: 5px;
+        border-bottom: 1px solid rgb(96,121,127);
       }
 
       .up-time {
@@ -287,7 +263,7 @@ body {
         font-size: 16px;
         background-color: rgb(255,255,255);
         margin-left: 30px;
-        margin-top: 5px;
+        margin-top: 10px;
       }
 
       .quality {
@@ -299,13 +275,14 @@ body {
   }
 
   .section-right {
-    float: left;
-    width: 770px;
-    height: 573px;
+    float: right;
+    width: 690px;
+    height: 570px;
     background-color: rgb(239,239,239);
 
     .record {
       .clearfix();
+      border-bottom: 1px solid rgb(255,255,255);
 
       .doctor-number {
         float: left;
@@ -317,7 +294,7 @@ body {
       .case-num {
         float: left;
         font-size: 14px;
-        margin-left: 380px;
+        margin-left: 300px;
         margin-top: 40px;
       }
 
@@ -326,16 +303,9 @@ body {
         width: 24px;
         height: 24px;
         margin-right: 40px;
-        margin-top: 40px;
+        margin-top: 35px;
       }
 
     }
-  }
-
-  .second-line {
-    height: 1px;
-    border: none;
-    background-color: rgb(255,255,255);
-    border: 1px ridge rgb(255,255,255);
   }
 }
