--- a/css/style.less
+++ b/css/style.less
@@ -32,7 +32,7 @@ body {
 .top-bar {
   .clearfix();
   width: 900px;
-  margin: 0 auto;
+  margin: 0 auto; //定宽居中设置
   background-color: rgb(255,255,255);
 
   .logo {
@@ -75,7 +75,9 @@ body {
       .en {
         font-size: 12px;
       }
+
     }
+
   }
 
   .btn {
@@ -90,6 +92,7 @@ body {
       color: rgb(110,220,250);
       background: rgb(255,255,255);
       border: 1px solid rgb(110,220,250);
+      border-right: none;
     }
 
     .register-btn {
@@ -99,7 +102,9 @@ body {
       background: rgb(0,190,250);
       border: 1px solid rgb(110,220,250);
     }
+
   }
+
 }
 
 .page-header {
@@ -119,7 +124,9 @@ body {
       padding: 3px 10px 2px;
       line-height: 1.2;
     }
+
   }
+
 }
 
 .section {
@@ -137,7 +144,7 @@ body {
 
       h3 {
         font-size: 18px;
-        padding: 15px 0 0;
+        padding: 15px 0 0; //考虑到margin折叠，不使用margin-top
         margin-left: 30px;
         margin-right: 5px;
         border-bottom: 1px solid rgb(96,121,127);
@@ -155,7 +162,6 @@ body {
         border-radius: 90px;
         font-size: 16px;
         background-color: rgb(255,255,255);
-
       }
 
       .hs {
@@ -179,6 +185,7 @@ body {
         margin-left: 30px;
         margin-top: 5px;
       }
+
     }
 
     .disease {
@@ -243,6 +250,7 @@ body {
         margin-left: 30px;
         margin-top: 5px;
       }
+
     }
 
     .others {
@@ -271,7 +279,9 @@ body {
         font-size: 16px;
         background-color: rgb(255,255,255);
       }
+
     }
+
   }
 
   .section-right {
@@ -298,14 +308,12 @@ body {
         margin-top: 40px;
       }
 
-      img {
-        float: right;
-        width: 24px;
-        height: 24px;
-        margin-right: 40px;
-        margin-top: 35px;
+      .card {
+        font-size: 40px;
       }
 
     }
+
   }
+
 }
