--- a/css/style.less
+++ b/css/style.less
@@ -308,8 +308,12 @@ body {
         margin-top: 40px;
       }
 
-      .card {
-        font-size: 40px;
+      .icon-xiangxia5 {
+        float: right;
+        font-size: 24px;
+        color: gray;
+        margin-right: 40px;
+        margin-top: 35px;
       }
 
     }
